# Forgotten

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Forgotten.code-workspace  clean.sh  cli_defaults.json  cli_defaults.yml  generate_vs.sh  generate_xcode.sh  new_run.sh  run.sh
App/: CMakeLists.txt
App/src/: Renderer.cpp  Renderer.hpp  main.cpp
Forgotten/: CMakeLists.txt
Forgotten/include/: Application.hpp  Entrypoint.hpp  Image.hpp  Layer.hpp  Random.hpp  Timer.hpp
Forgotten/src/: Application.cpp  Image.cpp  Random.cpp
Forgotten/src/imgui/: ImGuiBuild.cpp
ForgottenApp/: CMakeLists.txt
ForgottenApp/include/: ForgottenLayer.hpp
ForgottenApp/resources/: cli_defaults.yml  imgui.ini
ForgottenApp/resources/shaders/: 2d_renderer.frag  2d_renderer.vert  2d_renderer_circle.frag  2d_renderer_circle.vert  2d_renderer_line.frag  2d_renderer_line.vert  2d_renderer_text.frag  2d_renderer_text.vert  DirShadowMap.glsl  LightCulling.glsl  PreDepth.glsl  Renderer2D.glsl  Renderer2D_Render.glsl  Renderer2D_Text.glsl  SceneComposite.glsl  TexturePass.glsl  default_lighting.frag  tri_mesh.vert  triangle_shader_coloured.frag
ForgottenApp/src/: ForgottenLayer.cpp  main.cpp
ForgottenEngine/: CMakeLists.txt  fg.hpp  fg_pch.hpp  main.cpp
ForgottenEngine/include/: AABB.hpp  Application.hpp  ApplicationProperties.hpp  Asset.hpp  AssetTypes.hpp  Assets.hpp  Buffer.hpp  Clock.hpp  Common.hpp  DeletionQueue.hpp  EntryPoint.hpp  Enumeration.hpp  Forward.hpp  Hash.hpp  Image.hpp  Input.hpp  Layer.hpp  LayerStack.hpp  LogCustomFormatters.hpp  Logger.hpp  Memory.hpp  MemoryMapper.hpp  Mesh.hpp  PlatformSpecific.hpp  Reference.hpp  Renderer3D.hpp  Shader.hpp  TimeStep.hpp  Timer.hpp  UUID.hpp  VertexBuffer.hpp  Window.hpp  WindowProps.hpp
ForgottenEngine/include/codes/: KeyCode.hpp  MouseCode.hpp
ForgottenEngine/include/events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
ForgottenEngine/include/imgui/: CoreUserInterface.hpp  ImGui.hpp  ImGuiLayer.hpp
ForgottenEngine/include/implementations/: MacOSWindow.hpp
ForgottenEngine/include/implementations/MacOS/: MacOSWindow.hpp
ForgottenEngine/include/implementations/Windows/: WindowsWindow.hpp
ForgottenEngine/include/keys/: KeyCode.hpp
ForgottenEngine/include/maths/: Mathematics.hpp
ForgottenEngine/include/render/: Camera.hpp  ComputePipeline.hpp  Font.hpp  Framebuffer.hpp  Image.hpp  IndexBuffer.hpp  MSDFData.hpp  Material.hpp  MaterialAsset.hpp  Mesh.hpp  Pipeline.hpp  RenderCommandBuffer.hpp  RenderCommandQueue.hpp  RenderPass.hpp  Renderer.hpp  Renderer2D.hpp  RendererAPI.hpp  RendererCapabilites.hpp  RendererContext.hpp  SceneEnvironment.hpp  SceneRenderer.hpp  Shader.hpp  ShaderPack.hpp  ShaderUniform.hpp  StorageBuffer.hpp  StorageBufferSet.hpp  Texture.hpp  UniformBuffer.hpp  UniformBufferSet.hpp  VertexBuffer.hpp
ForgottenEngine/include/scene/: Components.hpp  Entity.hpp  Scene.hpp  SceneCamera.hpp  SceneSerialiser.hpp
ForgottenEngine/include/serialize/: FileStream.hpp  MemoryStream.hpp  Serialization.hpp  ShaderPackFile.hpp  StreamReader.hpp  StreamWriter.hpp
ForgottenEngine/include/user/: UserCamera.hpp
ForgottenEngine/include/utilities/: Casts.hpp  FileSystem.hpp  SerializationMacros.hpp  StringUtils.hpp  YAMLSerialisers.hpp
ForgottenEngine/include/vulkan/: VulkanAllocatedBuffer.hpp  VulkanAllocator.hpp  VulkanAssetLibrary.hpp  VulkanBuffer.hpp  VulkanComputePipeline.hpp  VulkanContext.hpp  VulkanDevice.hpp  VulkanEngine.hpp  VulkanFramebuffer.hpp  VulkanImage.hpp  VulkanIndexBuffer.hpp  VulkanInitializers.hpp  VulkanMaterial.hpp  VulkanMesh.hpp  VulkanMeshLibrary.hpp  VulkanPipeline.hpp  VulkanPipelineBuilder.hpp  VulkanPushConstant.hpp  VulkanRenderCommandBuffer.hpp  VulkanRenderPass.hpp  VulkanRenderer.hpp  VulkanShader.hpp  VulkanShaderResource.hpp  VulkanShaderUtils.hpp  VulkanStorageBuffer.hpp  VulkanStorageBufferSet.hpp  VulkanSwapchain.hpp  VulkanTexture.hpp  VulkanTypes.hpp  VulkanUBO.hpp  VulkanUniformBuffer.hpp  VulkanUniformBufferSet.hpp  VulkanUploadContext.hpp  VulkanVertex.hpp  VulkanVertexBuffer.hpp
ForgottenEngine/resources/shaders/: default_lighting.frag  textured_lighting.frag  tri_mesh.frag  tri_mesh.vert  triangle_shader_coloured.vert  ubo.vert
ForgottenEngine/src/: Application.cpp  Assets.cpp  HashCRC32.cpp  Image.cpp  LayerStack.cpp  Logger.cpp  Memory.cpp  MemoryMapper.cpp  Mesh.cpp  Reference.cpp  Shader.cpp  UUID.cpp  VertexBuffer.cpp
ForgottenEngine/src/imgui/: ImGuiLayer.cpp
ForgottenEngine/src/implementations/: MacOSFileSystem.cpp  MacOSWindow.cpp  StbImplementation.cpp  VMAImplementation.cpp
ForgottenEngine/src/maths/: Mathematics.cpp
ForgottenEngine/src/render/: ComputePipeline.cpp  Font.cpp  Framebuffer.cpp  Image.cpp  IndexBuffer.cpp  Material.cpp  Pipeline.cpp  RenderCommandBuffer.cpp  RenderCommandQueue.cpp  RenderPass.cpp  Renderer.cpp  Renderer2D.cpp  RendererContext.cpp  SceneRenderer.cpp  Shader.cpp  ShaderPack.cpp  StorageBuffer.cpp  StorageBufferSet.cpp  Texture.cpp  UniformBuffer.cpp  UniformBufferSet.cpp  VertexBuffer.cpp
ForgottenEngine/src/scene/: Scene.cpp
ForgottenEngine/src/serialize/: FileStream.cpp  MemoryStream.cpp  StreamReader.cpp  StreamWriter.cpp
ForgottenEngine/src/user/: UserCamera.cpp
ForgottenEngine/src/utilities/: FileSystem.cpp  StringUtils.cpp
ForgottenEngine/src/vulkan/: VMAImplementation.cpp  VulkanAllocator.cpp  VulkanAssetLibrary.cpp  VulkanBuffer.cpp  VulkanComputePipeline.cpp  VulkanContext.cpp  VulkanDevice.cpp  VulkanEngine.cpp  VulkanFramebuffer.cpp  VulkanImGui.cpp  VulkanImage.cpp  VulkanIndexBuffer.cpp  VulkanInitializers.cpp  VulkanInput.cpp  VulkanMaterial.cpp  VulkanMesh.cpp  VulkanMeshLibrary.cpp  VulkanPipeline.cpp  VulkanPipelineBuilder.cpp  VulkanRenderCommandBuffer.cpp  VulkanRenderPass.cpp  VulkanRenderer.cpp  VulkanShader.cpp  VulkanStorageBufferSet.cpp  VulkanSwapchain.cpp  VulkanTexture.cpp  VulkanTimer.cpp  VulkanUniformBuffer.cpp  VulkanUniformBufferSet.cpp  VulkanVertex.cpp  VulkanVertexBuffer.cpp
cmake_utils/common/: common.cmake  (+1 more)
(+19 files in other folders)
